--- a/lib/src/main/res/layout/day_item.xml
+++ b/lib/src/main/res/layout/day_item.xml
@@ -6,8 +6,6 @@
     android:layout_height="wrap_content"
     android:layout_weight="1"
     android:clickable="true"
-    android:focusable="true"
-    android:focusableInTouchMode="true"
     android:background="#FFF">
 
     <RelativeLayout
@@ -17,7 +15,7 @@
 
         <TextView
             android:id="@+id/item_day_nameTxv"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="29dp"
             android:layout_centerInParent="true"
 
