apply colors resources

--- a/lib/src/main/res/drawable/day_item_name_bg.xml
+++ b/lib/src/main/res/drawable/day_item_name_bg.xml
@@ -3,7 +3,7 @@
     <item android:top="25dp">
         <shape android:shape="rectangle">
             <size android:height="4dp" android:width="18dp"/>
-            <solid android:color="#BAECD8"/>
+            <solid android:color="@color/day_item_selected_background"/>
         </shape>
     </item>
 </layer-list>
