--- a/lib/src/main/res/drawable/day_item_current_bg.xml
+++ b/lib/src/main/res/drawable/day_item_current_bg.xml
@@ -4,7 +4,7 @@
         <shape
             android:shape="oval"
             xmlns:android="http://schemas.android.com/apk/res/android">
-            <solid android:color="#BAECD8"/>
+            <solid android:color="@color/day_item_current_day_indicator"/>
         </shape>
     </item>
 </layer-list>
