--- a/lib/src/main/res/drawable/day_item_num_bg.xml
+++ b/lib/src/main/res/drawable/day_item_num_bg.xml
@@ -2,6 +2,6 @@
 <shape
     android:shape="oval"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#BAECD8"/>
+    <solid android:color="@color/day_item_selected_background"/>
     <size android:height="42dp" android:width="42dp"/>
 </shape>
